# rct-extractor-v2

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN_POST_REVIEW.md  ACTION_PLAN_V3_REVISIONS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak.2026-03-14  DECISIONS.md  Dockerfile  E156-PROTOCOL.md  IMPROVEMENTS_ADDED.md  IMPROVEMENT_PLAN_V6.md  IMPROVEMENT_PLAN_V7_STATUS.md  LIMITATIONS_AND_MAINTENANCE.md  METHODS_APPENDIX.md  PLAN.md  README.md  STRAIGHT_PATH_PLAN.md  STUCK_FAILURES.jsonl  STUCK_FAILURES.md  VALIDATION_REPORT.md  _autostart_launcher.py  build_2000_dataset.py  ctg_validation_500.json  ctg_validation_results_full.json  install-autostart.ps1  push.sh  pyproject.toml  pytest.ini  requirements.txt  run_105_pdf_validation.py  run_advanced_validation.py  run_benchmark.py  run_calibration_fitting.py  run_clinical_trial_validation.py  run_comprehensive_validation.py  run_deep_pdf_analysis.py  run_enhanced_pdf_validation.py  run_expanded_ctgov_validation.py  (+25 more)
archive/: README.md
benchmark/: performance_report.md
configs/: cardio_vocabulary.yaml  field_profile.template.yaml
data/: batch_rct_manifest.json  curated_rct_manifest.json  expanded_validation_v3.py  external_validation_dataset.py  false_positive_test_cases.py  false_positive_test_set.py  gold_standard_split.json  held_out_test_set.json  held_out_test_set.py  negative_controls.py  pdf_classification.json  pdf_classification_enhanced.json  pdf_classification_enhanced_v435.json  pdf_gold_standard.py  stratified_validation_dataset.py  unified_corpus_manifest.json  validation_dataset.jsonl  validation_metadata.json
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DECISIONS.md  AUTOMATION_THRESHOLD_ANALYSIS.md  CALIBRATION_METHODOLOGY.md  ERROR_ANALYSIS.md  EXPANSION_PLAN.md  EXTERNAL_NO_TUNE_VALIDATION.md  EXTRACTOR_COMPARISON.md  FIELD_PORTABILITY_KIT.md  GOLD_STANDARD_CREATION.md  GOLD_STANDARD_METHODOLOGY.md  MAINTENANCE_ROADMAP.md  METHODOLOGY.md  PATTERN_DEVELOPMENT.md  PDF_GAP_CLOSURE_PLAN.md  PDF_VALIDATION.md  PDF_VALIDATION_IMPROVEMENT_PLAN.md  PRISMA_S_METHODS.md  REAL_PDF_VALIDATION_PLAN.md  REAL_RCT_EXECUTION_PLAN_2026-02-16.md  SAMPLE_SIZE_JUSTIFICATION.md  TOOL_COMPARISON.md  VALIDATION_LIMITATIONS.md  protocol.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
gold_data/: ANNOTATION_WORKSHEET.md  TRIAGE_REPORT.md  VERIFICATION_QUEUE.md  VERIFICATION_QUEUE_V3.md  baseline_results.json  baseline_results_v3.json  candidates.json  gold_50.jsonl  gold_50_v1_backup.jsonl  gold_v2.jsonl  gold_v3.jsonl  matched_studies.json  pmid_verification.json
output/: broad_publishability_readiness_2026-02-24.md  broad_target_attainment_2026-02-24.json  broad_target_attainment_2026-02-24.md  ci_verification_report.md  dashboard.html  external_all_validated_augmented_v1_pdf_only_bootstrap_ci.json  external_all_validated_augmented_v1_pdf_only_human_error_agreement_2026-02-24.json  external_all_validated_augmented_v1_pdf_only_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v1_pdf_only_metrics.json  external_all_validated_augmented_v1_pdf_only_report.md  external_all_validated_augmented_v1_pdf_only_summary.json  external_all_validated_augmented_v2_balanced_pdf_only_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v2_balanced_pdf_only_report.md  external_all_validated_augmented_v2_tight_pdf_only_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v2_tight_pdf_only_report.md  external_all_validated_augmented_v3_deep_pdf_only_advfix_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v3_deep_pdf_only_advfix_published_meta_comparison_2026-02-24.md  external_all_validated_augmented_v3_deep_pdf_only_advfix_report.md  external_all_validated_augmented_v3_deep_pdf_only_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v3_deep_pdf_only_report.md  external_all_validated_augmented_v4_broad_fullscan_pdf_only_human_error_agreement_2026-02-24.md  external_all_validated_augmented_v4_broad_fullscan_pdf_only_ma_records.jsonl  external_all_validated_augmented_v4_broad_fullscan_pdf_only_published_meta_comparison_2026-02-24.md  external_all_validated_augmented_v4_broad_fullscan_pdf_only_report.md  external_no_tune_30_v1_no_match_diagnostics.md  external_no_tune_30_v1_pdf_only_report.md  external_no_tune_30_v1_pdf_pubmed_report.md  external_no_tune_30_v1_publishability_report.md  external_no_tune_30_v2_pdf_only_report.md  external_no_tune_30_v2_pdf_pubmed_report.md  external_no_tune_30_v2_publishability_report.md  external_no_tune_40_v1_no_match_diagnostics.md  external_no_tune_40_v1_report.md  external_no_tune_40_v2_no_match_diagnostics.md  external_no_tune_40_v2_pmcid_audit.md  external_no_tune_40_v2_report.md  external_no_tune_40_v4_no_match_diagnostics.md  external_no_tune_40_v4_report.md  external_no_tune_40_v5_no_match_diagnostics.md  external_no_tune_40_v5_report.md  (+137 more)
regulatory/: FDA_HEAD_REVIEW.md  SOP_EXTRACTION_PROCEDURE.md  validation_report.json
scripts/: _path_utils.py  acquire_oa_rct_corpus_v2.py  ai_extract_gold.py  analyze_classification.py  analyze_extraction_failures.py  analyze_no_extraction_subtype_uplift.py  analyze_residual_extracted_no_match.py  apply_ai_validators_to_results.py  apply_dual_llm_borderline_validators.py  apply_ensemble_spotcheck_overrides.py  assess_ocr_quality.py  augment_identity_validation_with_unpaywall.py  auto_annotate_gold.py  auto_extract_v10.py  auto_extract_v10_1.py  auto_extract_v10_2_compute.py  benchmark_mega_1000_plus.py  benchmark_outside_solutions.py  bootstrap_real_rct_metrics.py  build_adjudicated_cohort.py  build_author_meta_benchmark_subset.py  build_author_meta_trial_benchmark_pack.py  build_blinded_ensemble_pre_adjudication.py  build_cardiology_adjudication_workplan.py  (+106 more)
(+1434 files in other folders)
